--- a/css/style.css
+++ b/css/style.css
@@ -1472,25 +1472,18 @@ article[id^="galleryItemContent"] {
 /* -------------------------------- 
 Old Forms
 -------------------------------- */
-.altLabel label {
-  text-align: left;
-  width: auto; }
-
-#form ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-#form li {
-  padding-bottom: .75em; }
-
-.radioSet li {
-  display: inline-block;
-  margin-right: 10px; }
-
 /* -------------------------------- 
 New Forms
 -------------------------------- */
+.error {
+  color: red; }
+
+.success {
+  color: black;
+  font-size: 14px;
+  text-align: center;
+  font-weight: 600; }
+
 .formWrapper {
   font-family: "Lato", sans-serif;
   background: #FFF5F5;
