--- a/css/style.css
+++ b/css/style.css
@@ -748,7 +748,7 @@ Single Slide Style + Mobile Images
   background-color: #2C343B;
   background-image: url("../assets/m_portfolio.jpg"); }
 .hero-slider li:nth-of-type(2) {
-  background-color: #161616;
+  background-color: #202020;
   background-image: url("../assets/m_jquery.jpg"); }
 .hero-slider li:nth-of-type(3) {
   background-color: #d4cfcb;
@@ -1470,16 +1470,16 @@ article[id^="galleryItemContent"] {
         margin: 2.5% 12.5%; } }
 
 /* -------------------------------- 
-Old Forms
--------------------------------- */
-/* -------------------------------- 
 New Forms
 -------------------------------- */
 .error {
-  color: red; }
+  position: absolute;
+  color: darkred;
+  margin-left: -80px;
+  font-size: 13px; }
 
 .success {
-  color: black;
+  color: #B2D430;
   font-size: 14px;
   text-align: center;
   font-weight: 600; }
@@ -1490,7 +1490,7 @@ New Forms
   color: #b3aca7;
   font-size: 25px;
   text-transform: uppercase; }
-  .formWrapper div.formHeader {
+  .formWrapper h3.formHeader {
     font-size: 1.3em;
     position: relative;
     margin: 75px 0 75px 0;
@@ -1499,28 +1499,28 @@ New Forms
     line-height: 2em;
     padding: 0 1em; }
     @media only screen and (min-width: 480px) {
-      .formWrapper div.formHeader {
+      .formWrapper h3.formHeader {
         padding: 0; } }
-  .formWrapper #form {
+  .formWrapper #contact {
     font-size: 37.5px;
     position: relative;
     width: 95%;
     margin: 50px auto 100px auto; }
     @media only screen and (min-width: 480px) {
-      .formWrapper #form {
+      .formWrapper #contact {
         width: 90%; } }
     @media only screen and (min-width: 768px) {
-      .formWrapper #form {
+      .formWrapper #contact {
         width: 75%; } }
-    .formWrapper #form div.formSubHeader {
+    .formWrapper #contact h4.formSubHeader {
       margin: 1.5em auto 0 auto;
       font-size: 0.6em;
       letter-spacing: 7px;
       line-height: 2em; }
       @media only screen and (min-width: 768px) {
-        .formWrapper #form div.formSubHeader {
+        .formWrapper #contact h4.formSubHeader {
           font-size: 0.7em; } }
-    .formWrapper #form button[type=submit] {
+    .formWrapper #contact button[type=submit] {
       cursor: pointer;
       display: block;
       padding: 1.2em 1.4em;
@@ -1532,10 +1532,10 @@ New Forms
       letter-spacing: 1px;
       text-transform: uppercase;
       transition: all 1.3s; }
-      .formWrapper #form button[type=submit]:hover, .formWrapper #form button[type=submit]:focus {
+      .formWrapper #contact button[type=submit]:hover, .formWrapper #contact button[type=submit]:focus {
         box-shadow: inset 20em 0 0.25px 0 #aca49c;
         color: #FFF5F5; }
-    .formWrapper #form label {
+    .formWrapper #contact label {
       width: 90%;
       text-align: left;
       display: inline-block;
@@ -1543,21 +1543,21 @@ New Forms
       padding: 0 1em 0 2em;
       margin: .5em auto .5em 0; }
       @media only screen and (min-width: 768px) {
-        .formWrapper #form label {
+        .formWrapper #contact label {
           font-size: 0.45em; } }
-    .formWrapper #form input[type^="text"] {
+    .formWrapper #contact input[type^="text"] {
       border: solid 1px #b3aca7;
       border-top: none;
       height: 50px;
       padding: 0 15px 0 15px; }
-    .formWrapper #form input[type^="text"]:first-of-type {
+    .formWrapper #contact input[type^="text"]:first-of-type {
       border-top: solid 1px #b3aca7; }
-    .formWrapper #form textarea {
+    .formWrapper #contact textarea {
       border: solid 1px #b3aca7;
       height: 160px;
       max-height: 160px;
       padding: 15px; }
-    .formWrapper #form input[type="text"], .formWrapper #form textarea {
+    .formWrapper #contact input[type="text"], .formWrapper #contact textarea {
       -webkit-appearance: none;
       -webkit-border-radius: 0px;
       border-radius: 0;
@@ -1575,76 +1575,76 @@ New Forms
       /*    F O C U S   >   P L A C E H O L D E R   */
       /*    P L A C E H O L D E R   */ }
       @media only screen and (min-width: 480px) {
-        .formWrapper #form input[type="text"], .formWrapper #form textarea {
+        .formWrapper #contact input[type="text"], .formWrapper #contact textarea {
           width: 95%; } }
       @media only screen and (min-width: 768px) {
-        .formWrapper #form input[type="text"], .formWrapper #form textarea {
+        .formWrapper #contact input[type="text"], .formWrapper #contact textarea {
           font-size: .7em;
           width: 100%; } }
-      .formWrapper #form input[type="text"]:hover, .formWrapper #form textarea:hover {
+      .formWrapper #contact input[type="text"]:hover, .formWrapper #contact textarea:hover {
         background: #b3aca7;
         color: #FFF5F5;
         /*    H O V E R   >   P L A C E H O L D E R   */
         /*    H O V E R   >   F O C U S   >   P L A C E H O L D E R   */ }
-        .formWrapper #form input[type="text"]:hover::-webkit-input-placeholder, .formWrapper #form textarea:hover::-webkit-input-placeholder {
+        .formWrapper #contact input[type="text"]:hover::-webkit-input-placeholder, .formWrapper #contact textarea:hover::-webkit-input-placeholder {
           color: #FFF5F5; }
           @media only screen and (min-width: 768px) {
-            .formWrapper #form input[type="text"]:hover::-webkit-input-placeholder, .formWrapper #form textarea:hover::-webkit-input-placeholder {
+            .formWrapper #contact input[type="text"]:hover::-webkit-input-placeholder, .formWrapper #contact textarea:hover::-webkit-input-placeholder {
               font-size: .7em; } }
-        .formWrapper #form input[type="text"]:hover::-moz-placeholder, .formWrapper #form textarea:hover::-moz-placeholder {
+        .formWrapper #contact input[type="text"]:hover::-moz-placeholder, .formWrapper #contact textarea:hover::-moz-placeholder {
           color: #FFF5F5; }
           @media only screen and (min-width: 768px) {
-            .formWrapper #form input[type="text"]:hover::-moz-placeholder, .formWrapper #form textarea:hover::-moz-placeholder {
+            .formWrapper #contact input[type="text"]:hover::-moz-placeholder, .formWrapper #contact textarea:hover::-moz-placeholder {
               font-size: .7em; } }
-        .formWrapper #form input[type="text"]:hover::-ms-placeholder, .formWrapper #form textarea:hover::-ms-placeholder {
+        .formWrapper #contact input[type="text"]:hover::-ms-placeholder, .formWrapper #contact textarea:hover::-ms-placeholder {
           color: #FFF5F5; }
           @media only screen and (min-width: 768px) {
-            .formWrapper #form input[type="text"]:hover::-ms-placeholder, .formWrapper #form textarea:hover::-ms-placeholder {
+            .formWrapper #contact input[type="text"]:hover::-ms-placeholder, .formWrapper #contact textarea:hover::-ms-placeholder {
               font-size: .7em; } }
-        .formWrapper #form input[type="text"]:hover::placeholder, .formWrapper #form textarea:hover::placeholder {
+        .formWrapper #contact input[type="text"]:hover::placeholder, .formWrapper #contact textarea:hover::placeholder {
           color: #FFF5F5; }
           @media only screen and (min-width: 768px) {
-            .formWrapper #form input[type="text"]:hover::placeholder, .formWrapper #form textarea:hover::placeholder {
+            .formWrapper #contact input[type="text"]:hover::placeholder, .formWrapper #contact textarea:hover::placeholder {
               font-size: .7em; } }
-        .formWrapper #form input[type="text"]:hover:focus::-webkit-input-placeholder, .formWrapper #form textarea:hover:focus::-webkit-input-placeholder {
+        .formWrapper #contact input[type="text"]:hover:focus::-webkit-input-placeholder, .formWrapper #contact textarea:hover:focus::-webkit-input-placeholder {
           color: black; }
-        .formWrapper #form input[type="text"]:hover:focus::-moz-placeholder, .formWrapper #form textarea:hover:focus::-moz-placeholder {
+        .formWrapper #contact input[type="text"]:hover:focus::-moz-placeholder, .formWrapper #contact textarea:hover:focus::-moz-placeholder {
           color: black; }
-        .formWrapper #form input[type="text"]:hover:focus::-ms-placeholder, .formWrapper #form textarea:hover:focus::-ms-placeholder {
+        .formWrapper #contact input[type="text"]:hover:focus::-ms-placeholder, .formWrapper #contact textarea:hover:focus::-ms-placeholder {
           color: black; }
-        .formWrapper #form input[type="text"]:hover:focus::placeholder, .formWrapper #form textarea:hover:focus::placeholder {
+        .formWrapper #contact input[type="text"]:hover:focus::placeholder, .formWrapper #contact textarea:hover:focus::placeholder {
           color: black; }
-      .formWrapper #form input[type="text"]:focus::-webkit-input-placeholder, .formWrapper #form textarea:focus::-webkit-input-placeholder {
+      .formWrapper #contact input[type="text"]:focus::-webkit-input-placeholder, .formWrapper #contact textarea:focus::-webkit-input-placeholder {
         color: black; }
-      .formWrapper #form input[type="text"]:focus::-moz-placeholder, .formWrapper #form textarea:focus::-moz-placeholder {
+      .formWrapper #contact input[type="text"]:focus::-moz-placeholder, .formWrapper #contact textarea:focus::-moz-placeholder {
         color: black; }
-      .formWrapper #form input[type="text"]:focus::-ms-placeholder, .formWrapper #form textarea:focus::-ms-placeholder {
+      .formWrapper #contact input[type="text"]:focus::-ms-placeholder, .formWrapper #contact textarea:focus::-ms-placeholder {
         color: black; }
-      .formWrapper #form input[type="text"]:focus::placeholder, .formWrapper #form textarea:focus::placeholder {
+      .formWrapper #contact input[type="text"]:focus::placeholder, .formWrapper #contact textarea:focus::placeholder {
         color: black; }
-      .formWrapper #form input[type="text"]::-webkit-input-placeholder, .formWrapper #form textarea::-webkit-input-placeholder {
+      .formWrapper #contact input[type="text"]::-webkit-input-placeholder, .formWrapper #contact textarea::-webkit-input-placeholder {
         color: #ACA49C;
         font-size: .6em; }
         @media only screen and (min-width: 768px) {
-          .formWrapper #form input[type="text"]::-webkit-input-placeholder, .formWrapper #form textarea::-webkit-input-placeholder {
+          .formWrapper #contact input[type="text"]::-webkit-input-placeholder, .formWrapper #contact textarea::-webkit-input-placeholder {
             font-size: .7em; } }
-      .formWrapper #form input[type="text"]::-moz-placeholder, .formWrapper #form textarea::-moz-placeholder {
+      .formWrapper #contact input[type="text"]::-moz-placeholder, .formWrapper #contact textarea::-moz-placeholder {
         color: #ACA49C;
         font-size: .6em; }
         @media only screen and (min-width: 768px) {
-          .formWrapper #form input[type="text"]::-moz-placeholder, .formWrapper #form textarea::-moz-placeholder {
+          .formWrapper #contact input[type="text"]::-moz-placeholder, .formWrapper #contact textarea::-moz-placeholder {
             font-size: .7em; } }
-      .formWrapper #form input[type="text"]::-ms-placeholder, .formWrapper #form textarea::-ms-placeholder {
+      .formWrapper #contact input[type="text"]::-ms-placeholder, .formWrapper #contact textarea::-ms-placeholder {
         color: #ACA49C;
         font-size: .6em; }
         @media only screen and (min-width: 768px) {
-          .formWrapper #form input[type="text"]::-ms-placeholder, .formWrapper #form textarea::-ms-placeholder {
+          .formWrapper #contact input[type="text"]::-ms-placeholder, .formWrapper #contact textarea::-ms-placeholder {
             font-size: .7em; } }
-      .formWrapper #form input[type="text"]::placeholder, .formWrapper #form textarea::placeholder {
+      .formWrapper #contact input[type="text"]::placeholder, .formWrapper #contact textarea::placeholder {
         color: #ACA49C;
         font-size: .6em; }
         @media only screen and (min-width: 768px) {
-          .formWrapper #form input[type="text"]::placeholder, .formWrapper #form textarea::placeholder {
+          .formWrapper #contact input[type="text"]::placeholder, .formWrapper #contact textarea::placeholder {
             font-size: .7em; } }
 
 /* R A D I O     B U T T O N S    P L U M A G E
